# o

./: .gitignore  COPYING  Makefile.am  README  autogen.sh  configure.ac  default.css  index.html  install.html  license.html  run_tests  usage.html
demo/: crawl.yg  index.html
doc/: default.css  install.html  license.html
include/: o.h
include/o/: private.h
issues/: issue-00be9a8ac1adbc20b0d163a10ec6400f811b448f.yaml  issue-099bc7b8b824bdc882b35c0897cfa5dafdcc5c98.yaml  issue-0dce634bc7243f9fd079da1e39ec2bee438f8c7d.yaml  issue-2640e8bbfe62c4c4e526be30fa523bc9da7b1dc7.yaml  issue-56bde53d71f9d1c3a93f9d79ce779668c2009fba.yaml  issue-6332ab9b32a224e64bbdc6f790d2e07afb599eb1.yaml  issue-64e6f79ec4813babefec6a7f738e3bdc0dc3777e.yaml  issue-cef66de71ef637d106ec9520ffad32e4e0df7d88.yaml  issue-fbbe7d0f5777a029de37f53328eb7d42565cafca.yaml  project.yaml
samples/: russel-einstein-manifesto.ja  tamao_withdraws_morning_musume
src/: Makefile.am  core.c  o.c  parser.y
tests/: test_and000  test_and010  test_attr000  test_attr010  test_create000  test_fuzzy000  test_fuzzy010  test_get000  test_normalize000  test_normalize010  test_not000  test_not010  test_or000  test_or010  test_or020  test_paren000  test_paren010  test_put000  test_search000  test_search010  test_search020  test_search030  test_search040
tools/: dist  distcheck
tools/lemon/: Makefile.am  lemon.c
