#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([o], [0.0.2], [SumiTomohiko@neko-daisuki.ddo.jp])
AM_INIT_AUTOMAKE([dist-bzip2])
AC_CONFIG_SRCDIR([src/o.c])
AC_CONFIG_HEADERS([include/o/config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 tools/lemon/Makefile])
AC_CONFIG_SUBDIRS([tokyocabinet])
AC_OUTPUT

# vim: tabstop=2 shiftwidth=2 expandtab softtabstop=2
